@@ -44,6 +44,8 @@ def get_parser():
                         help='Overwrite output file if it exists')
     parser.add_argument('--version', action='version', version='%(prog)s '
                         + khmer.__version__)
+    parser.add_argument('-f', '--force', default=False, action='store_true',
+                        help='Overwrite output file if it exists')
     return parser
 
 
@@ -53,7 +55,7 @@ def main():
     infiles = [args.input_counting_table_filename,
                args.input_sequence_filename]
     for infile in infiles:
-        check_file_status(infile)
+        check_file_status(infile, args.force)
 
     print ('hashtable from', args.input_counting_table_filename,
            file=sys.stderr)
