@@ -74,6 +74,8 @@ def get_parser():
     parser.add_argument('infile')
     parser.add_argument('--version', action='version', version='%(prog)s '
                         + khmer.__version__)
+    parser.add_argument('-f', '--force', default=False, action='store_true',
+                        help='Overwrite output file if it exists')
     return parser
 
 
@@ -81,9 +83,9 @@ def main():
     info('extract-paired-reads.py')
     args = get_parser().parse_args()
 
-    check_file_status(args.infile)
+    check_file_status(args.infile, args.force)
     infiles = [args.infile]
-    check_space(infiles)
+    check_space(infiles, args.force)
 
     outfile = os.path.basename(args.infile)
     if len(sys.argv) > 2:
