@@ -20,7 +20,7 @@ def test_check_space():
 
     save_stderr, sys.stderr = sys.stderr, cStringIO.StringIO()
     try:
-        khmer.file.check_space([fakelump_fa], _testhook_free_space=0)
+        khmer.file.check_space([fakelump_fa], force=False, _testhook_free_space=0)
         assert 0, "this should fail"
     except SystemExit as e:
         print str(e)
@@ -31,8 +31,32 @@ def test_check_space():
 def test_check_tablespace():
     save_stderr, sys.stderr = sys.stderr, cStringIO.StringIO()
     try:
-        khmer.file.check_space_for_hashtable(1e9, _testhook_free_space=0)
+        khmer.file.check_space_for_hashtable(1e9, force=False,  _testhook_free_space=0)
         assert 0, "this should fail"
+    except SystemExit as e:
+        print str(e)
+    finally:
+        sys.stderr = save_stderr
+
+
+def test_check_space_force():
+    fakelump_fa = utils.get_test_data('fakelump.fa')
+
+    save_stderr, sys.stderr = sys.stderr, cStringIO.StringIO()
+    try:
+        khmer.file.check_space([fakelump_fa], force=True, _testhook_free_space=0)
+        assert True, "this should pass"
+    except SystemExit as e:
+        print str(e)
+    finally:
+        sys.stderr = save_stderr
+
+
+def test_check_tablespace_force():
+    save_stderr, sys.stderr = sys.stderr, cStringIO.StringIO()
+    try:
+        khmer.file.check_space_for_hashtable(1e9, force=True,  _testhook_free_space=0)
+        assert True, "this should pass"
     except SystemExit as e:
         print str(e)
     finally:
